# genairate

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: merged_audio_short.mov
genairate/: audio_models.py  cli.py  get_audio.py  get_moderation.py  get_songs.py  language_models.py  utils.py
genairate/configs/: audio_local.yaml  audio_remote.yaml  audio_remote_custom.yaml  audio_remote_custom_audiocraft.yaml  audio_remote_custom_audioldm2.yaml  beats_music.yaml  classic_music.yaml  edm2_music.yaml  edm_music.yaml  electronic_music.yaml  intro.yaml  moderation.yaml  pop_music.yaml  rock_music.yaml
