[tool.poetry]
name = "genairate"
version = "0.1.0"
description = "package to generate various kinds of audio using configuration files."
authors = ["Sebastian Krödel"]
maintainers = ["Sebastian Krödel <skroedel@protonmail.ch>",]
license = "MIT"
readme = "README.md"
keywords = ["generative audio", "sound"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3"
]
repository = "https://github.com/skroed/genairate"


[tool.poetry.dependencies]
python = "~3.10"
transformers = "^4.33"
click = "^8.1.7"
torch = "^2.0.1"
huggingface-hub = "^0.17.3"
accelerate = "^0.23.0"
einops = "^0.7.0"
safetensors = "^0.3.3"
nltk = "^3.8.1"
scipy = "^1.11.3"
openai = "^1.0.0b2"
xformers = "^0.0.22"
audiocraft = "^1.0"

[tool.poetry.dev-dependencies]
pre-commit = "*"
pytest = "*"
pytest-black="*"
black="*"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py310']

[tool.poetry.scripts]
genairate = "genairate.cli:genairate_cli"
